@@ -28,3 +28,6 @@ Version: V0.3B3 Date: Tue Oct  4 10:04:27 2005 +++++++++++++++++++++++++++++++
 + bug fixed in WaitCursor (override/restore waitcursor only once if several instances of WaitCursor exist at a time)
 + add new dialog to define own shortcuts
 + added Build directory and installer files
++ bug with start workbench fixed (in case if user defined start workbench is hidden)
++ Allow to open a determined page from preferences dialog
++ add context menu to tabs
